apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

bootJar {
    archiveFileName = 'server.jar'
}

//compileJava {
//    options.compilerArgs += ["--enable-preview"]
//}
//test {
//    jvmArgs '--enable-preview'
//}

sourceCompatibility = 11
targetCompatibility = 11

dependencies {
    implementation 'io.microconfig:microconfig-core:4.3.0',
            'org.springframework.boot:spring-boot-starter-web',
            'org.springframework.boot:spring-boot-starter-actuator',
            'org.springframework.security:spring-security-core',
            'org.eclipse.jgit:org.eclipse.jgit:5.6.0.201912101111-r'

    compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.0'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    testImplementation libs.test
}
